fix: gallery modal z-index 10

--- a/site/src/components/pages/PhotoGallery/Gallery.module.scss
+++ b/site/src/components/pages/PhotoGallery/Gallery.module.scss
@@ -59,6 +59,7 @@
     }
 
     &__modal {
+        z-index: 10;
         position: fixed;
         height: 100%;
         width: 100%;
